--- a/src/app/components/ini-a/ini-a.component.html
+++ b/src/app/components/ini-a/ini-a.component.html
@@ -29,7 +29,7 @@
 
 
         <mat-card class="cuerpo">
-            <h1>Inicio sesion docente</h1>
+            <h1>Inicio sesion alumno</h1>
             <form class="login">
                 <p>Correo institucional:</p>
                 <div class="input-box">
@@ -42,10 +42,10 @@
                 <!--   <div class="remember-forgot">
                     <a href="#">¿Olvidaste tu contraseña?</a>
                 </div> -->
-                <button type="submit" value="enviar"><a href="/dashboard">Iniciar sesion</a></button>
+                <button type="submit" value="enviar"><a href="/dashboard-a">Iniciar sesion</a></button>
                 <button class="btn-dos"><a href="/inicio" class="re">Regresar</a></button>
                 <div class="register-link">
-                    <p>¿Eres alumno?<a href="/ini-a">Inicia sesion aquí</a></p>
+                    <p>¿Eres docente?<a href="/iniciosesion">Inicia sesion aquí</a></p>
                 </div>
             </form>
         </mat-card>
