--- a/src/app/components/navbar-a/navbar-a.component.html
+++ b/src/app/components/navbar-a/navbar-a.component.html
@@ -1,9 +1,9 @@
 <header>
     <nav>
-        <img src="assets/img/logo.png" alt="" class="logo">
+        <img src="assets/img/logo.png" alt="" class="logo" routerLink="/Inicio">
         <ul class="menu">
-            <li><a href="/dashboard">Inicio</a></li>
-            <li><a href="/libros">Libros</a>
+            <li><a href="/dashboard-a">Inicio</a></li>
+            <li><a href="/libros-a">Libros</a>
                 <ul class="submenu">
                     <li><a href="#">Valores</a>
                         <ul class="submenu2">
@@ -16,7 +16,7 @@
                     <li><a href="#">Etica</a></li>
                 </ul>
             </li>
-            <li><a href="/actividades">Actividades</a>
+            <li><a href="/act-a">Actividades</a>
                 <ul class="submenu">
                     <li><a href="#">Día naranja</a>
                         <ul class="submenu2">
@@ -29,8 +29,8 @@
                     <li><a href="#">Mujer</a></li>
                 </ul>
             </li>
-            <li><a href="/ayuda">Ayuda</a></li>
-            <li><a href="/contacto">Contacto</a></li>
+            <li><a href="/ayuda-a">Ayuda</a></li>
+            <li><a href="/contacto-a">Contacto</a></li>
             <li><a href="/inicio">Cerrar sesion</a></li>
         </ul>
     </nav>
