--- a/src/app/components/act-a/act-a.component.html
+++ b/src/app/components/act-a/act-a.component.html
@@ -1,4 +1,5 @@
-<app-navbar></app-navbar>
+<app-navbar-a></app-navbar-a>
+
 
 <div class="container mt-5">
     <div class="row">
@@ -6,7 +7,7 @@
             <div class="card">
                 <div class="card-header">
                     <span class="titulo" style="text-align: center;">LISTADO DE ACTIVIDADES</span>
-                    <div class="btn btn-outline-light float-end" routerLink="/add-act">AGREGAR</div>
+                    <!-- <div class="btn btn-outline-success float-end" routerLink="/crear-producto">AGREGAR</div> -->
                 </div>
                 <div class="card-body" id="uno">
                     <div class="row">
@@ -17,17 +18,11 @@
                                     <a [href]=""><img [src]="" class="card-img-top" alt="..." style="width: 50%; margin-left: 80px;"></a>
                                     <p class="card-text"><b>Actividad: </b></p>
                                     <p class="card-text"><b>Descripción:</b></p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <a class="btn btn-sm btn-outline-success">Editar</a>
-                                            <button class="btn btn-sm btn-outline-danger">Eliminar</button>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <h5 style="text-align: start; margin-top: 10px;">No hay productos para mostar</h5>
+                    <h5 style="text-align: start; margin-top: 10px;">No hay tareas que mostrar</h5>
                 </div>
             </div>
         </div>
