--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -13,9 +13,9 @@
 <body>
     <section class="banner contenedor">
         <section class="banner_title">
-            <h2>Aprendiendo de<br><span></span></h2>
+            <h2>Aprendiendo de <br><span></span></h2>
             <div class="botones">
-                <a id="uno" href="/iniciosesion">Inicia sesion</a>
+                <a id="uno" href="/ini-a">Inicia sesion</a>
             </div>
         </section>
         <div class="banner_img">
