--- a/src/app/components/libros-a/libros-a.component.html
+++ b/src/app/components/libros-a/libros-a.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbar-a></app-navbar-a>
 
 <div class="container mt-5">
     <div class="row">
@@ -6,7 +6,6 @@
             <div class="card">
                 <div class="card-header">
                     <span class="titulo" style="text-align: center;">LISTADO DE LIBROS</span>
-                    <div class="btn btn-outline-light float-end" routerLink="/addlibro">AGREGAR</div>
                 </div>
                 <div class="card-body" id="uno">
                     <div class="row">
@@ -15,20 +14,15 @@
                                 <div class="card-body" id="dos">
                                     <h5 class="card-title" style="text-align: center;"><b></b></h5>
                                     <a [href]=""><img [src]="" class="card-img-top" alt="..." style="width: 50%; margin-left: 80px;"></a>
+                                    <p class="card-text"><b>Libro: </b></p>
                                     <p class="card-text"><b>Titulo: </b></p>
                                     <p class="card-text"><b>Autor: </b></p>
                                     <p class="card-text"><b>Fecha: </b></p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <a class="btn btn-sm btn-outline-success">Editar</a>
-                                            <button class="btn btn-sm btn-outline-danger">Eliminar</button>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <h5 style="text-align: start; margin-top: 10px;">No hay libros para mostar</h5>
+                    <h5 style="text-align: start; margin-top: 10px;">No hay productos para mostar</h5>
                 </div>
             </div>
         </div>
