--- a/src/app/components/ini-a/ini-a.component.html
+++ b/src/app/components/ini-a/ini-a.component.html
@@ -17,12 +17,12 @@
 
             <div class="slider-frame">
                 <ul>
-                    <li><img src="assets/images/ciencia-de-los-datos.png" alt=""></li>
-                    <li><img src="assets/images/circuito-electrico.png" alt=""></li>
-                    <li><img src="assets/images/desarrollador.png" alt=""></li>
-                    <li><img src="assets/images/industrial.png" alt=""></li>
-                    <li><img src="assets/images/ingenieria.png" alt=""></li>
-                    <li><img src="assets/images/presupuesto.png" alt=""></li>
+                    <li><img src="assets/img/uno.jpeg" alt=""></li>
+                    <li><img src="assets/img/cuatro.jpg" alt=""></li>
+                    <li><img src="assets/img/tres.jpeg" alt=""></li>
+                    <li><img src="assets/img/cinco.jpg" alt=""></li>
+                    <li><img src="assets/img/dos.jpeg" alt=""></li>
+                    <li><img src="assets/img/seis.jpg" alt=""></li>
                 </ul>
             </div>
         </mat-card>
