--- a/src/app/components/contacto-a/contacto-a.component.html
+++ b/src/app/components/contacto-a/contacto-a.component.html
@@ -1,1 +1,19 @@
 <app-navbar-a></app-navbar-a>
+
+<body>
+    <div class="container-form">
+        <div class="info-form">
+            <h2>Contáctanos</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui eligendi est voluptates quae ipsam eius, in quasi odio porro aut vel beatae aperiam.</p>
+            <a><i class="bi bi-telephone-fill"></i> 55 59  82 10 88 y 55 59 82 10 89 Ext. 1112</a>
+            <a><i class="bi bi-envelope-fill"></i> depto.desarrollo.academico@tesch.edu.mx</a>
+            <a><i class="bi bi-geo-alt-fill"></i> Ubicados en el edificio bicentenario, planta baja</a>
+        </div>
+        <form action="#" autocomplete="off">
+            <input type="text" name="nombre" placeholder="Tu Nombre" class="campo">
+            <input type="emal" name="email" placeholder="Tu Email" class="campo">
+            <textarea name="mensaje" placeholder="Tu Mensaje..."></textarea>
+            <input type="submit" name="enviar" value="Enviar Mensaje" class="btn-enviar">
+        </form>
+    </div>
+</body>
